--- a/vending-machine/src/app/product-display/product-display.component.html
+++ b/vending-machine/src/app/product-display/product-display.component.html
@@ -1,3 +1,10 @@
-<div *ngFor="let product of this.allProducts">
-    <p>{{product._id}}</p>
+<div class = "product-display" *ngFor="let product of this.allProducts">
+    <img [src]="imgSource" alt="here will be image">
+    Name: {{product.name}}
+    Stock: {{product.stock}}
+    Price: {{product.price}}
+
+    <form>
+        Enter Quantity of {{product.name}}: <input type="number" onchange="{() => {this.quantity(product.name,value)}}">
+    </form>
 </div>
